--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,56 +1,55 @@
-* {
+* /* Style sheet that designs whole webpage.*/
+/* universal selector.*/ 
+* { 
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
+/* body selector to change background color to white.*/
 body {
     background-color: #d9dcd6;
 }
-
-.header {
+/* header to assign padding, and blue and white to fonts and their backgrounds.*/
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-
-.header h1 {
+/* h1 to change display of headers and make them 48px big*/
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
-
-.header h1 .seo {
+/* assigns "seo" a darker shade of white*/
+header h1 .seo {
     color: #d9dcd6;
 }
-
-.header div {
+/* header ul assigns and positions all clickable links on top banner for webpage*/
+header ul {
+    list-style-type: none;
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
+/* ul li organizes the links to be next to each other instead of stacked */
+header ul li {
     display: inline-block;
     margin-left: 25px;
 }
-
+/*assigns colors to each word in banner */
 a {
     color: #ffffff;
     text-decoration: none;
 }
-
+/*changes color for every paragraph on page */
 p {
     font-size: 16px;
 }
-
-.hero {
+/* links and assigns size to photo with people around table */
+.hero { 
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -58,23 +57,23 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/* positions first photo of three */
 .float-left {
     float: left;
     margin-right: 25px;
 }
-
+/* positions the photo on the right side of paragraph */
 .float-right {
     float: right;
     margin-left: 25px;
 }
-
+/* positions third photo on left of paragraph */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
+/* condensed all benefit sizes into one, and sized them equally on right side of page */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -85,55 +84,26 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
-.benefit-lead {
+/* positions the benefit words on right side and colors them white */
+.benefits {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+/* adds headers and colors them white on the right side of page */
+h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+/* adds images for each benefit */
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
+/* sizes the paragraph for search engine optimization */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -142,7 +112,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* sizes the paragraph for online reputation management */
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -151,7 +121,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* sizes paragraph for social media marketing */
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -160,41 +130,31 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* sizes photo for SEO image */
 .search-engine-optimization img {
     max-height: 200px;
 }
-
+/* sizes photo for ORM image */
 .online-reputation-management img {
     max-height: 200px;
 }
-
+/* sizes photo for SMM image */
 .social-media-marketing img {
     max-height: 200px;
 }
-
-.search-engine-optimization h2 {
+/* headers for all paragraphs on the left side of page */
+h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.footer {
+/* Changes the type of font, as well as the size. moves moves text to center. */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
